--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/node": "^15.12.4",
     "@vitejs/plugin-vue": "^1.2.3",
     "@vue/compiler-sfc": "^3.0.5",
+    "stylus": "^0.54.8",
+    "stylus-loader": "^6.1.0",
     "typescript": "^4.3.2",
     "vite": "^2.3.7",
     "vue-tsc": "^0.0.24"
